--- a/style.css
+++ b/style.css
@@ -27,13 +27,13 @@
 }
 
 :root {
-	--background: #16052e;
-	--header: linear-gradient(-45deg, #042697, #451b8e, #b20d57);
-	--btn: #a10ec5;
-	--promo: rgba(219, 39, 119, 0.3);
-	--table: rgba(10, 33, 71, 0.95);
-	--white: #fdf2f8;
-	--black: #1a1f34;
+	--background: #0a192f;
+	--header: linear-gradient(-45deg, #0047ab, #c2410c, #fbbf24);
+	--btn: #facc15;
+	--promo: rgba(250, 204, 21, 0.15);
+	--table: rgba(16, 32, 60, 0.9);
+	--white: #f0f9ff;
+	--black: #081221;
 	--title: #ffffff;
 }
 
@@ -124,13 +124,38 @@ header {
 	justify-content: space-between;
 	background: var(--header);
 	backdrop-filter: blur(2px);
+	border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 	max-width: 100vw;
 	margin: 0 auto;
 	margin-bottom: 20px;
 	position: sticky;
 	top: 0;
-	clip-path: polygon(0 0, 100% 0, 97% 100%, 3% 100%);
+	overflow: hidden;
 	z-index: 200;
+}
+
+header::after {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: -150%;
+	width: 50%;
+	height: 100%;
+	background: linear-gradient(to right, transparent, rgba(255, 255, 255, 0.2), transparent);
+	transform: skewX(-25deg);
+	animation: shine 6s infinite;
+}
+
+@keyframes shine {
+	0% {
+		left: -150%;
+	}
+	20% {
+		left: 150%;
+	}
+	100% {
+		left: 150%;
+	}
 }
 
 header img {
@@ -182,6 +207,7 @@ header img {
 	flex-wrap: wrap;
 	border: 1px solid rgba(255, 255, 255, 0.3);
 	box-shadow: 0 0 15px var(--btn);
+	backdrop-filter: blur(5px);
 	border-radius: 5px;
 	padding: 20px;
 	overflow: hidden;
@@ -420,7 +446,6 @@ footer a:hover {
 		justify-content: space-around;
 		padding: 10px;
 		margin-bottom: 10px;
-		clip-path: polygon(0 0, 100% 0, 98% 100%, 2% 100%);
 	}
 
 	header img {
